--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
+    "@abrookins-redis/redis-sitesearch-frontend": "^1.0.2",
     "@docusaurus/core": "2.0.0-alpha.70",
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
     "@docusaurus/theme-search-algolia": "^2.0.0-alpha.70",
