--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scroll": "^1.8.7",
-    "react-slick": "^0.29.0",
-    "react-typed": "^1.2.0"
+    "react-scroll": "^1.8.1",
+    "react-slick": "^0.28.0",
+    "typed.js": "^2.0.12"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.21"
