--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.28.0",
+    "sass": "^1.52.3",
     "typed.js": "^2.0.12"
   },
   "devDependencies": {
